samples/_failures_safe/1761652503_64ccc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4565107f.c: In function ‘print_token’:
./samples/SAFE/__tmp_4565107f.c:168: error: expected ‘{’ at end of input
